--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,19 @@ Score System
 Different Enemy AIs, all inheriting from a base enemy
 Power-Ups
 Level Completion
+
+
+To implement:
+	Pellets
+	Super Pellets
+	Ghosts
+	
+	Main Menu
+		Play
+		High Scores
+		Options
+	
+	Controller Support / Remappable controls ( both really useful to learn for future )
+	
+	Sound Effects
+	Music (try making it yourself in FL Studio...)
